--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto')
+
+html
+	height 100%
+	width 100%
+	overflow-x hidden
 body
 	background white
 	color blue
+	font-family 'Roboto', sans-serif
